--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -10,13 +10,17 @@
       <br/>
       <div class="row">
         <div class="col-sm">
-          <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail"
+          <img [src]="getSrcImg(profile.photoUuid)" class="avatar img-circle img-thumbnail"
                alt="avatar">
+            <a *ngIf="!save" (click)="editProfile()" ><i style="color: blue" class="fa fa-edit fa-2x"></i></a>
+            <a *ngIf="save" (click)="saveProfile()"><i style="color: blue" class="fa fa-save fa-2x"></i></a>
+
+
           <br>
           <br>
-          <label class="btn btn-info btn-sm" translate>claim.uploadPhoto
+          <label class="btn btn-info btn-sm" translate *ngIf="save">claim.uploadPhoto
             <i class="fa fa-upload"></i>
-            <input type="file" hidden>
+            <input type="file" hidden (change)="onFileChanged($event)">
           </label>
         </div>
         <div class="col-sm-5">
@@ -25,19 +29,52 @@
           <p class="grey-text">последний раз был (а) 17:00 23 декабря 2019 года</p>
           <p>Группа продажи - Руководитель группы Асем Аскаровна</p>
           <p>Рабочее состояние: в отпуске с 1 января - 15 января 2019 года</p>
-          <p>Телефон: +7 777 77 77
-            &nbsp;<i aria-hidden="true" class="fa fa-whatsapp text-success"></i>&nbsp;
-            &nbsp;<i aria-hidden="true" class="fa fa-telegram text-primary"></i>&nbsp;
-            &nbsp;<i aria-hidden="true" class="fa fa-skype text-info"></i>
-          </p>
-          <p>e-mail: <a href="mailto:vlad@htmlbook.ru?subject=Вопрос по HTML">asd@asd.kz</a></p>
-          <div>Адрес: Нурсултан
+          <div class="form-group row">
+            <label for="inputEmail3MD" class="col-sm-2 col-form-label">Телефон</label>
+            <div class="col-sm-10">
+              <div class="md-form mt-0">
+                <input mdbInput type="text" [(ngModel)]="profile.phone" [disabled]="!save"   class="form-control" id="inputEmail3MD" placeholder="Телефон">
+                <!--&nbsp;<i aria-hidden="true" class="fa fa-whatsapp text-success"></i>&nbsp;-->
+                <!--&nbsp;<i aria-hidden="true" class="fa fa-telegram text-primary"></i>&nbsp;-->
+                <!--&nbsp;<i aria-hidden="true" class="fa fa-skype text-info"></i>-->
+              </div>
+            </div>
+          </div>
+          <div class="form-group row" style="margin-top: -50px;">
+          <label for="inputEmail3MD2" class="col-sm-2 col-form-label">e-mail:</label>
+          <div class="col-sm-10">
+            <div class="md-form mt-0">
+              <input mdbInput type="email" [(ngModel)]="profile.email"  [disabled]="!save" class="form-control" id="inputEmail3MD2" placeholder="e-mail">
+            </div>
+          </div>
+        </div>
+          <div class="form-group row" style="margin-top: -50px;">
+            <label class="col-sm-2 col-form-label">Адрес: </label>
+            <div class="col-sm-10">
+              <div class="md-form mt-0">
+                <input  type="text" [(ngModel)]="profile.address" [disabled]="!save"   class="form-control"  placeholder="Адрес">
+              </div>
+            </div>
+          </div>
+          <!--<p class="md-form">Телефон:-->
+
+
+            <!--<input mdbInput type="text" [(ngModel)]="profile?.phone" id="form1" class="form-control">-->
+            <!--&nbsp;<i aria-hidden="true" class="fa fa-whatsapp text-success"></i>&nbsp;-->
+            <!--&nbsp;<i aria-hidden="true" class="fa fa-telegram text-primary"></i>&nbsp;-->
+            <!--&nbsp;<i aria-hidden="true" class="fa fa-skype text-info"></i>-->
+          <!--</p>-->
+          <!--<p>e-mail: <a href="mailto:vlad@htmlbook.ru?subject=Вопрос по HTML">{{profile?.email}}</a></p>-->
+          <div>
+            <!--Адрес: {{profile?.address}}-->
             <fieldset class="col-md-6">
-              <legend>Транспорт</legend>
+              <legend>Транспорт   </legend>
 
               <div class="panel panel-default">
                 <div class="panel-body">
-                  <p>D 789 UKM</p>
+                  <!--<p>{{profile?.transport}}</p>-->
+                 <input mdbInput type="text" [(ngModel)]="profile.transport"  [disabled]="!save"   class="form-control" placeholder="Транспорт">
+
                 </div>
               </div>
 
@@ -54,103 +91,131 @@
           <p>Сумма продаж: 8,7 баллов</p>
         </div>
       </div>
-
-      <div class="row">
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
-          <li class="nav-item">
-            <a class="nav-link active" id="open-tab" data-toggle="tab" href="#open" role="tab" aria-controls="open"
-               aria-selected="true">Мои клиенты
-              <span class="badge badge-info ml-2">1</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="open-sell-tab" data-toggle="tab" href="#open-sell" role="tab"
-               aria-controls="open-sell"
-               aria-selected="false">Мои объекты
-              <span class="badge badge-info ml-2">0</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="open-buy-tab" data-toggle="tab" href="#open-buy" role="tab"
-               aria-controls="open-buy"
-               aria-selected="false">Мои сделки
-              <span class="badge badge-info ml-2">0</span>
-            </a>
-          </li>
-        </ul>
-        <div class="tab-content" id="myTabContent">
-          <div class="tab-pane fade show active" id="open" role="tabpanel" aria-labelledby="open-tab">
-          </div>
-          <div class="tab-pane fade" id="open-sell" role="tabpanel" aria-labelledby="open-sell-tab">
-
-          </div>
-          <div class="tab-pane fade" id="open-buy" role="tabpanel" aria-labelledby="open-buy-tab">
+      <ul class="nav nav-tabs" id="myTab2" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Мои клиенты</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Мои объекты</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Мои сделки</a>
+        </li>
+      </ul>
+      <div class="tab-content" id="myTabContent2">
+        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+          <div class="row">
+            <div class="col-sm">
+              <table class="table table-striped table-bordered table-sm">
+                <thead>
+                <tr>
+                  <th class="th-sm">Id</th>
+                  <th class="th-sm">Имя Фамилия</th>
+                  <th class="th-sm">Номер тел</th>
+                  <th class="th-sm">Цель</th>
+                  <th class="th-sm">Статус</th>
+                </tr>
+                </thead>
+                <tbody style="cursor: pointer">
+                <tr *ngFor="let client of clientsData;let i = index">
+                  <td>{{client.clientId}}</td>
+                  <td>{{client.fullname}}</td>
+                  <td>{{client.phoneNumber}}</td>
+                  <td>{{client.target[getDicNameByLanguage()]}}</td>
+                  <td>{{client.status[getDicNameByLanguage()]}}</td>
+                </tr>
+                </tbody>
+              </table>
+              <div class="position-static createClaimBtn">
+                <button type="button" class="btn btn-success btn-circle btn-xl" (click)="dnHref('create-claim')"><i
+                  class="fa fa-plus"></i>
+                </button>
+              </div>
+              <pagination [(ngModel)]="currentPage"
+                          [totalItems]="totalItems"
+                          [itemsPerPage]="itemsPerPage"
+                          [maxSize]="10"
+                          [rotate]="true"
+                          [boundaryLinks]="true"
+                          previousText="&lsaquo;"
+                          nextText="&rsaquo;"
+                          firstText="&laquo;"
+                          lastText="&raquo;"
+                          (pageChanged)="pageChanged($event)">
+              </pagination>
+            </div>
           </div>
 
         </div>
-      </div>
-      <div class="row">
-        <table id="tableSortExample" mdbTable class="z-depth-1">
-          <thead>
-          <tr>
-            <th *ngFor="let head of clientsData; let i = index" aria-controls="tableSortExample" scope="col" [mdbTableSort]="clientsData" [sortBy]="clientsData[i]">{{head | titlecase}}
-              <mdb-icon fas icon="sort"></mdb-icon>
-            </th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr *ngFor="let client of clientsData;let i = index">
-            <td>{{client.clientId}}</td>
-            <td>{{client.fullname}}</td>
-            <td>{{client.phoneNumber}}</td>
-            <td>{{client.target[getDicNameByLanguage()]}}</td>
-            <td>{{client.status[getDicNameByLanguage()]}}</td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+        <app-my-objects></app-my-objects>
+        </div>
+        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+          <app-my-claims></app-my-claims>
 
-      <div class="row">
-        <div class="col-sm">
-          <table class="table table-striped table-bordered table-sm">
-            <thead>
-            <tr>
-              <th class="th-sm">Id</th>
-              <th class="th-sm">Имя Фамилия</th>
-              <th class="th-sm">Номер тел</th>
-              <th class="th-sm">Цель</th>
-              <th class="th-sm">Статус</th>
-            </tr>
-            </thead>
-            <tbody style="cursor: pointer">
-            <tr *ngFor="let client of clientsData;let i = index">
-              <td>{{client.clientId}}</td>
-              <td>{{client.fullname}}</td>
-              <td>{{client.phoneNumber}}</td>
-              <td>{{client.target[getDicNameByLanguage()]}}</td>
-              <td>{{client.status[getDicNameByLanguage()]}}</td>
-            </tr>
-            </tbody>
-          </table>
-          <div class="position-static createClaimBtn">
-            <button type="button" class="btn btn-success btn-circle btn-xl" (click)="dnHref('create-claim')"><i
-              class="fa fa-plus"></i>
-            </button>
-          </div>
-          <pagination [(ngModel)]="currentPage"
-                      [totalItems]="totalItems"
-                      [itemsPerPage]="itemsPerPage"
-                      [maxSize]="10"
-                      [rotate]="true"
-                      [boundaryLinks]="true"
-                      previousText="&lsaquo;"
-                      nextText="&rsaquo;"
-                      firstText="&laquo;"
-                      lastText="&raquo;"
-                      (pageChanged)="pageChanged($event)">
-          </pagination>
         </div>
       </div>
+
+
+      <!--<div class="row">-->
+        <!--<ul class="nav nav-tabs" id="myTab" role="tablist">-->
+          <!--<li class="nav-item">-->
+            <!--<a class="nav-link active" id="open-tab" data-toggle="tab" href="#open" role="tab" aria-controls="open"-->
+               <!--aria-selected="true">Мои клиенты-->
+              <!--<span class="badge badge-info ml-2">1</span>-->
+            <!--</a>-->
+          <!--</li>-->
+          <!--<li class="nav-item">-->
+            <!--<a class="nav-link" id="open-sell-tab" data-toggle="tab" href="#open-sell" role="tab"-->
+               <!--aria-controls="open-sell"-->
+               <!--aria-selected="false">Мои объекты-->
+              <!--<span class="badge badge-info ml-2">0</span>-->
+            <!--</a>-->
+          <!--</li>-->
+          <!--<li class="nav-item">-->
+            <!--<a class="nav-link" id="open-buy-tab" data-toggle="tab" href="#open-buy" role="tab"-->
+               <!--aria-controls="open-buy"-->
+               <!--aria-selected="false">Мои сделки-->
+              <!--<span class="badge badge-info ml-2">0</span>-->
+            <!--</a>-->
+          <!--</li>-->
+        <!--</ul>-->
+        <!--<div class="tab-content" id="myTabContent">-->
+          <!--<div class="tab-pane fade show active" id="open" role="tabpanel" aria-labelledby="open-tab">-->
+
+          <!--</div>-->
+
+          <!--<div class="tab-pane fade" id="open-sell" role="tabpanel" aria-labelledby="open-sell-tab">-->
+<!--<div>41</div>-->
+          <!--</div>-->
+          <!--<div class="tab-pane fade" id="open-buy" role="tabpanel" aria-labelledby="open-buy-tab">-->
+ <!--3-->
+          <!--</div>-->
+
+        <!--</div>-->
+      <!--</div>-->
+      <!--<div class="row">-->
+        <!--<table id="tableSortExample" mdbTable class="z-depth-1">-->
+          <!--<thead>-->
+          <!--<tr>-->
+            <!--<th *ngFor="let head of clientsData; let i = index" aria-controls="tableSortExample" scope="col" [mdbTableSort]="clientsData" [sortBy]="clientsData[i]">{{head | titlecase}}-->
+              <!--<mdb-icon fas icon="sort"></mdb-icon>-->
+            <!--</th>-->
+          <!--</tr>-->
+          <!--</thead>-->
+          <!--<tbody>-->
+          <!--<tr *ngFor="let client of clientsData;let i = index">-->
+            <!--<td>{{client.clientId}}</td>-->
+            <!--<td>{{client.fullname}}</td>-->
+            <!--<td>{{client.phoneNumber}}</td>-->
+            <!--<td>{{client.target[getDicNameByLanguage()]}}</td>-->
+            <!--<td>{{client.status[getDicNameByLanguage()]}}</td>-->
+          <!--</tr>-->
+          <!--</tbody>-->
+        <!--</table>-->
+      <!--</div>-->
+
+
     </div>
   </div>
 
