--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -8,19 +8,19 @@
               <div class="form-group row">
                 <label for="surName" class="col-sm-4 col-form-label" translate>Агентсике договора</label>
                 <div class="col-sm">
-                  <input type="text" class="form-control" readonly [value]="2500000" />
+                  <input type="text" class="form-control" readonly [value]="2500000"/>
                 </div>
               </div>
               <div class="form-group row">
                 <label for="surName" class="col-sm-4 col-form-label" translate>Сумма задатков</label>
                 <div class="col-sm">
-                  <input type="text" class="form-control" readonly [value]="1000"  />
+                  <input type="text" class="form-control" readonly [value]="1000"/>
                 </div>
               </div>
               <div class="form-group row">
                 <label for="surName" class="col-sm-4 col-form-label" translate>Сумма продаж</label>
                 <div class="col-sm">
-                  <input type="text" class="form-control" readonly [value]="70000"  />
+                  <input type="text" class="form-control" readonly [value]="70000"/>
                 </div>
               </div>
             </div>
@@ -48,7 +48,8 @@
           <div class="form-group row">
             <label for="patronymic" class="col-sm-2 col-form-label" translate>patronymic</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="patronymic" [(ngModel)]="applicationLightForm.patronymic" formControlName="patronymic">
+              <input type="text" class="form-control" id="patronymic" [(ngModel)]="applicationLightForm.patronymic"
+                     formControlName="patronymic">
             </div>
           </div>
           <div class="form-group row">
@@ -57,8 +58,8 @@
               <input type="text" id="phoneNumber" class="form-control"
                      [(ngModel)]="applicationLightForm.phoneNumber" name="phoneNumber"
                      [formControl]="applicationLightForm.controls['phoneNumber']"
-                     prefix="+" mask="0 (000) 000 00 00"/>
-              <!--                   (ngModelChange)="searchByPhone()"/>-->
+                     prefix="+" mask="0 (000) 000 00 00"
+                     (ngModelChange)="searchByPhone()"/>
             </div>
           </div>
           <div class="form-group row">
