--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,86 +1,6 @@
 <div class="wrapper">
-  <!--Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark primary-color" *ngIf="currentUser">
-    <a class="navbar-brand" href="#">HTC</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
-            aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" (click)="dnHref('analytics')">
-            <span translate>analytics.title</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="dnHref('news')">
-            <span translate>news.title</span>
-          </a>
-        </li>
-      </ul>
-      <ul class="navbar-nav ml-auto nav-flex-icons">
-        <li class="nav-item" [className]="_language.language == 'ru' ? 'active' : ''">
-          <a class="nav-link waves-effect waves-light">
-            <a (click)="changeLang('ru')">Рус</a>
-          </a>
-        </li>
-        <li class="nav-item" [className]="_language.language == 'kz' ? 'active' : ''">
-          <a class="nav-link waves-effect waves-light">
-            <a (click)="changeLang('kz')">Қаз</a>
-          </a>
-        </li>
-        <li class="nav-item dropdown">
-
-          <a class="nav-link dropdown-toggle text-uppercase" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
-             aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-user"></i> {{currentUser?.surname}} {{currentUser?.name}}
-          </a>
-          <div class="dropdown-menu dropdown-menu-right dropdown-default"
-               aria-labelledby="navbarDropdownMenuLink-333">
-            <a class="dropdown-item" (click)="dnHref('profile')" translate>profile.myProfile</a>
-            <hr/>
-            <a class="dropdown-item" (click)="logout()" translate>profile.exit</a>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <ul class="nav justify-content-center lighten-4 py-1 nav2" *ngIf="currentUser">
-    <li class="nav-item">
-      <a class="nav-link" (click)="dnHref('objects')">
-        <span translate>objects.title</span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" (click)="dnHref('board')">
-        <span translate>controlPanels.title</span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a (click)="dnHref('claims')" class="nav-link">
-        <span translate>claim.title</span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" (click)="dnHref('staffs')">
-        <span translate>staffs.title</span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" (click)="dnHref('dic-control')">
-        <span translate>Управление справочниками</span>
-      </a>
-    </li>
-  </ul>
-  <!--/.Navbar -->
-
+  <app-nav></app-nav>
   <router-outlet [hidden]="loading"></router-outlet>
   <toast-messages></toast-messages>
+  <app-footer></app-footer>
 </div>
-<footer class="page-footer font-small blue fixed-bottom" *ngIf="currentUser">
-  <div class="footer-copyright text-center py-3">© {{year}} Copyright:
-    <a > htc.dilau.kz</a>
-  </div>
-</footer>
