--- a/frontend/src/app/claims/create-claim/yandex-map/yandex-map.component.html
+++ b/frontend/src/app/claims/create-claim/yandex-map/yandex-map.component.html
@@ -1,10 +1,15 @@
 <p>yandex-map works!</p>
 <div class="map">
-  <angular-yandex-map [center]="[55.751952, 37.600739]"  (yaclick)="onLoad($event)" [zoom]="8" >
+  <angular-yandex-map [center]="[51.12, 71.43]"  (yaclick)="onLoad($event)" [zoom]="8" >
     <angular-yandex-placemark
       [geometry]="cord"
-      [properties]="placemarkProperties"
       [options]="placemarkOptions"
-    ></angular-yandex-placemark>
+      (drag)="onLoad2($event)"
+      (load)="onLoad3($event)"
+></angular-yandex-placemark>
+    <angular-yandex-control
+      [type]="'SearchControl'"
+      [parameters]="parameters"
+    ></angular-yandex-control>
   </angular-yandex-map>
 </div>
